--- a/tasktwo-movie/src/index.css
+++ b/tasktwo-movie/src/index.css
@@ -1,13 +1,760 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500&family=Inter:wght@400;700&family=Poppins:wght@500;600&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0em;
+  font-family: "DM Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-base {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text-5xl {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 48px;
+}
+
+.movie .favorite-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  z-index: 1;
+  background: rgba(243, 244, 246, 0.5);
+  border-radius: 50%;
+
+  display: flex; /* Add this property */
+  align-items: center; /* Add this property */
+  justify-content: center; /* Add this property */
+  cursor: pointer;
+}
+
+.movie .favorite-icon i {
+  padding: 10px;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.movie .favorite-icon:hover {
+  color: red;
+}
+
+.movie .favorite-icon .active {
+  color: blue !important;
+}
+
+.movie .favorite-icon .not-active {
+  color: rgba(209, 213, 219, 1) !important;
+}
+
+.header {
+  width: 100%;
+  height: 100%;
+}
+
+.poster {
+  height: 80vh;
+}
+
+.poster img {
+  height: 100%;
+  object-fit: fill;
+}
+
+.header .carousel .black-overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.header .carousel-control-prev,
+.header .carousel-control-next {
+  display: none;
+}
+
+.header .carousel-indicators {
+  flex-direction: column;
+  right: 78%;
+  bottom: 25%;
+  left: 78%;
+}
+
+.header .carousel-indicators {
+  counter-reset: carousel-indicator;
+}
+
+/* .header .carousel-indicators [data-bs-target]::before {
+  content: counter(carousel-indicator);
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  left: 20px;
+  margin-top: -9px;
+} */
+
+.header .carousel-caption {
+  width: 40%;
+  color: #fff;
+  bottom: 3em;
+  right: 0%;
+  left: 3%;
+  text-align: start;
+}
+
+.header .carousel-indicators [data-bs-target] {
+  width: 15px;
+  height: 2px;
+  text-indent: -20px;
+}
+
+.header .carousel-indicators p {
+  margin-left: -13px;
+  color: #fff;
+  font-size: 10px;
+  position: absolute;
+  right: 5px;
+  padding-top: 15px;
+}
+
+.header .carousel-caption .rating,
+.featured-movies .movie .rating {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 0em;
+  font-family: "DM Sans", sans-serif;
+}
+
+.header .carousel-caption img {
+  width: 20px;
+  height: 20px;
+}
+
+.header .carousel-caption .movie-about {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.header .carousel-caption button {
+  background: rgba(190, 18, 60, 1);
+  padding: 6px 16px 6px 16px;
+  border-radius: 6px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  gap: 8px;
+}
+
+.header form {
+  width: 525px;
+  height: 36px;
+}
+
+.header form .form-control,
+.header form button {
+  background: transparent;
+  border-radius: 6px;
+  color: #fff;
+}
+
+.header form .form-control {
+  border-right: 0;
+}
+
+.header form .form-control:hover,
+.header form .form-control:focus,
+.header form .form-control:active {
+  box-shadow: none !important;
+  border: 1px solid rgba(255, 255, 255, 1);
+  border-right: 0;
+}
+
+.header form button {
+  border-left: 0 !important;
+}
+
+.header form .form-control::placeholder {
+  color: #fff;
+}
+
+.header .navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.header .navbar .signin {
+  text-decoration: none !important;
+  color: #fff;
+}
+
+.header .navbar .toggle-mobile {
+  display: none !important;
+}
+
+.header .navbar-toggler,
+.header .navbar-toggler:hover,
+.header .navbar-toggler:active,
+.header .navbar-toggler:focus {
+  border: 0 !important;
+  box-shadow: none !important;
+  cursor: pointer;
+}
+
+.header .navbar-toggler-icon {
+  background-image: url("./assets/menu.svg") !important;
+}
+
+.featured-movies h3 {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 47px;
+}
+
+.featured-movies a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  color: rgba(190, 18, 60, 1);
+  text-decoration: none;
+}
+.col-xl-3 {
+  width: 23% !important;
+}
+.featured-movies .movie {
+  height: 450px;
+  margin: 0;
+  padding: 0;
+  border-radius: 8px;
+  /* border: 1px solid red; */
+}
+
+.featured-movies .movie .movie-poster img {
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.featured-movies .movie .movie-date,
+.featured-movies .movie .movie-genre {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  color: rgba(156, 163, 175, 1);
+}
+
+.featured-movies .movie .movie-name {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  color: rgba(17, 24, 39, 1);
+}
+
+.featured-movies .movie .movie-name:hover {
+  color: rgba(190, 18, 60, 1);
+}
+
+footer .socials {
+  width: 30%;
+}
+
+footer .links {
+  width: 50%;
+}
+
+footer .links a {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  color: rgba(17, 24, 39, 1);
+  text-decoration: none;
+}
+
+footer .socials .social-icon {
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  vertical-align: middle;
+  color: rgba(17, 24, 39, 1);
+}
+
+footer .copyright {
+  color: rgba(107, 114, 128, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+/*IFRAME*/
+
+.movie-details .sb-sidenav-menu {
+  border-right: 1px solid rgba(102, 102, 102, 1);
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.movie-details .nav-link {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0em;
+  color: rgba(102, 102, 102, 1) !important;
+}
+
+.movie-details .nav-link:hover {
+  background-color: rgba(190, 18, 60, 0.1);
+}
+
+.movie-details .nav-link.active {
+  border-right: 6px solid rgba(190, 18, 60, 1);
+  background-color: rgba(190, 18, 60, 0.1);
+  color: rgba(190, 18, 60, 1);
+}
+
+.movie-details .home-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("https://api.iconify.design/octicon/home-24.svg?color=%23666")
+    no-repeat center center / contain;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: 30px;
+  color: rgba(102, 102, 102, 1);
+}
+
+.movie-details .movie-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("https://api.iconify.design/bx/camera-movie.svg?color=%23666")
+    no-repeat center center / contain;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: 30px;
+}
+
+.movie-details .tv-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("https://api.iconify.design/system-uicons/tv-mode.svg?color=%23666")
+    no-repeat center center / contain;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: 30px;
+}
+
+.movie-details .upcoming-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("https://api.iconify.design/fluent/calendar-16-regular.svg?color=%23666")
+    no-repeat center center / contain;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: 30px;
+}
+
+.movie-details .sb-sidenav-footer {
+  background: transparent !important;
+}
+
+.movie-details .sb-sidenav-footer .movie-quiz {
+  border-radius: 10px;
+  border: 1px solid rgba(190, 18, 60, 0.7);
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+}
+
+.movie-details .sb-sidenav-footer .movie-quiz h6 {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0em;
+  color: rgba(51, 51, 51, 0.8);
+}
+
+.movie-details .sb-sidenav-footer .movie-quiz p {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(102, 102, 102, 1);
+}
+
+.movie-details .sb-sidenav-footer .movie-quiz .startplay {
+  background: rgba(190, 18, 60, 0.2);
+  border-radius: 30px;
+  color: rgba(190, 18, 60, 1);
+}
+
+.movie-details .sb-sidenav-footer .logout-btn {
+  color: rgba(102, 102, 102, 1);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+}
+
+.movie-details .toggle-btn {
+  background: rgba(190, 18, 60, 1);
+  color: #fff;
+  display: none;
+}
+
+.movie-details .movie-trailer-bg .movie-trailer {
+  object-fit: cover;
+  width: 100%;
+  height: 400px;
+  border-radius: 30px;
+}
+
+.movie-details .movie-trailer-bg .play-button {
+  background: rgba(232, 232, 232, 0.5);
+  font-size: 60px;
+  width: 110px;
+  height: 110px;
+  color: rgba(255, 255, 255, 1);
+}
+
+.movie-details .movie h3 {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 35px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(64, 64, 64, 1);
+}
+
+.movie-details .movie .genres {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(185, 28, 28, 1);
+}
+
+.movie-details .movie .rating p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(102, 102, 102, 1);
+}
+
+.movie-details .movie .rating h6 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 38px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(232, 232, 232, 1);
+}
+
+.movie-details .movie-people p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(51, 51, 51, 1);
+}
+
+.movie-details .movie-people span {
+  color: rgba(190, 18, 60, 1);
+}
+
+.movie-details .red-btn,
+.movie-details .showtimes-btn {
+  background: rgba(190, 18, 60, 1);
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0em;
+  color: rgba(255, 255, 255, 1);
+}
+
+.movie-details .dropdown-toggle::after {
+  display: none;
+}
+
+.movie-details .dropdown-toggle p {
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(51, 51, 51, 1);
+}
+
+.movie-details .dropdown-toggle {
+  border: 1px solid rgba(199, 199, 199, 1);
+}
+
+.movie-details .watchOptions-btn {
+  background: rgba(190, 18, 60, 0.1);
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0em;
+  border: 1px solid rgba(190, 18, 60, 1);
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.movie-details .movie-grid {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+}
+
+.movie-details .overlay {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 100%;
+  height: 35px;
+  border-bottom-left-radius: 28px;
+  border-bottom-right-radius: 28px;
+  z-index: 1;
+  background: rgba(18, 18, 18, 0.5);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: rgba(232, 232, 232, 1);
+}
+@media only screen and (max-width: 1024px) {
+  footer .links {
+    width: 60%;
+  }
+
+  .movie-details .red-btn {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header .navbar .toggle-mobile {
+    display: flex !important;
+  }
+
+  .header .navbar .toggle-main {
+    display: none !important;
+  }
+  .header .carousel-caption {
+    width: 70%;
+    margin-top: 20px !important;
+    bottom: 1em;
+  }
+
+  .header form {
+    margin: 10px;
+  }
+  .featured-movies .col-md-4 {
+    width: 31% !important;
+  }
+  .featured-movies h3 {
+    font-size: 30px;
+  }
+  .featured-movies a {
+    font-size: 14px;
+  }
+
+  .featured-movies .movie .movie-name,
+  footer .links a {
+    font-size: 16px;
+  }
+  footer .socials {
+    width: 40%;
+  }
+
+  footer .links {
+    width: 80%;
+  }
+
+  .movie-details .movie h3 {
+    font-size: 20px;
+  }
+  .movie-details .movie .rating h6 {
+    font-size: 15px;
+  }
+
+  .movie-details .movie .rating p {
+    font-size: 13px;
+  }
+  .movie-details .toggle-btn {
+    color: #fff;
+    display: flex;
+  }
+
+  .movie-details .overlay {
+    height: 48px;
+    font-size: 13px;
+  }
+
+  .movie-details .red-btn,
+  .movie-details .dropdown-toggle p {
+    font-size: 13px;
+  }
+
+  .movie-details .movie-info {
+    flex-direction: column;
+    align-items: start !important;
+  }
+
+  .movie-details .rating {
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (max-width: 426px) {
+  .header {
+    padding: 0 !important;
+  }
+
+  .header .navbar {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+
+  .header .carousel-caption {
+    width: 90%;
+  }
+
+  .header .carousel-indicators {
+    display: none;
+  }
+
+  .header form {
+    width: 350px;
+  }
+
+  .featured-movies .col-md-4 {
+    width: 46% !important;
+  }
+
+  footer .socials {
+    width: 60%;
+  }
+
+  footer .links {
+    padding: 0 !important;
+    width: 100%;
+  }
+
+  .movie-details .movie {
+    flex-direction: column;
+    align-items: start !important;
+    text-align: center;
+  }
+
+  .movie-details .red-btn {
+    margin-bottom: 20px !important;
+  }
+  .movie-details .showtimes-btn {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    font-size: 13px;
+  }
+
+  .movie-details .watchOptions-btn {
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 376px) {
+  .header .carousel-details {
+    width: 90%;
+  }
+  .header form {
+    width: 320px;
+  }
+
+  .featured-movies .col-md-4 {
+    width: 95% !important;
+  }
+
+  .featured-movies h3 {
+    font-size: 22px;
+  }
+
+  footer .links a {
+    font-size: 15px;
+  }
+
+  footer .links .links-list {
+    flex-direction: column;
+  }
+
+  footer .links .links-list li {
+    margin-bottom: 10px;
+  }
+
+  footer .copyright {
+    font-size: 14px;
+  }
+
+  .featured-movies .movie .movie-date,
+  .featured-movies .movie .movie-name,
+  .featured-movies .movie .rating,
+  .featured-movies .movie .movie-genre {
+    text-align: center;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .text-5xl {
+    font-size: 40px;
+  }
+
+  .header .navbar-brand img {
+    width: 140px;
+  }
+  .header form {
+    width: 288px;
+  }
+
+  .header .carousel-caption {
+    left: 0%;
+  }
+
+  .header .carousel-caption {
+    width: 100%;
+  }
+
+  .movie-details .movie h3 {
+    font-size: 14px;
+  }
+  .movie-details .movie-people p {
+    font-size: 14px;
+  }
 }
