--- a/helpmeout-web/src/index.css
+++ b/helpmeout-web/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@700&family=Work+Sans&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Work Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header .navbar-brand span {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  color: rgba(16, 10, 66, 1);
+}
+
+header .nav-link {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  color: rgba(0, 0, 0, 1);
+}
+
+header .toggle-main a {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 23px;
+  color: rgba(18, 11, 72, 1);
+}
+
+.hero h2 {
+  color: rgba(20, 20, 20, 1);
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 64px;
+}
+
+.hero p {
+  color: rgba(0, 0, 0, 0.75);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.hero button {
+  padding: 22px 24px 22px 24px;
+  border-radius: 8px;
+  background-color: rgba(18, 11, 72, 1);
 }
